--- a/Snack 5/index.html
+++ b/Snack 5/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <main class="esercizio"></main>
+    <div class="esercizio"></div>
+    <div class="esercizio1"></div>
     <script src="app.js"></script>
 </body>
 
